package soso_proto;
message soso_crawler
{
    optional string    query = 1;  // query
    optional string    engine =  2;  // engine
    optional string    url = 3; // most important 
    optional string    ua = 4;
    optional string    sleeptime = 5;
}

message soso_crawler_resp
{
    required int32  status =1; //1 ok
    optional string content = 2; //html string
}

